--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-learning-area/accessibility
-learning-area/css
-learning-area/javascript
-learning-area/tools-testing
-learning-area/html/*/
 toefl/test-big
 toefl/tpo
-/learning-area
-/TPO
-
+/tpo
 /favicons
